ecmascript/parser/tests/test262-error-references/fail/f51aea0352bb03f3.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/f51aea0352bb03f3.js:1:3
  |
1 | --1
  |   ^

